--- a/app/src/main/res/layout/activity_productos_vista.xml
+++ b/app/src/main/res/layout/activity_productos_vista.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ACCFE2"
-    tools:context=".Masajes">
+    tools:context=".ProductosVista">
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="166dp"
-        android:layout_height="59dp"
-        android:text="Masaje relajante"
-        android:textColor="#FFFFFF"
+        android:layout_width="149dp"
+        android:layout_height="42dp"
+        android:text="perkins 25$"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.91"
+        app:layout_constraintHorizontal_bias="0.903"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.742" />
@@ -25,22 +25,36 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tipo de masajes"
+        android:text="Productos"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.171" />
+        app:layout_constraintVertical_bias="0.148" />
+
+    <Button
+        android:id="@+id/Añadir1"
+        android:layout_width="134dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#27253A"
+        android:text="Añadir"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.836"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.461" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="176dp"
-        android:layout_height="62dp"
-        android:text="Masaje quiropractico"
-        android:textColor="#FFFFFF"
+        android:layout_width="175dp"
+        android:layout_height="38dp"
+        android:text="perkins 25$"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,11 +64,11 @@
         app:layout_constraintVertical_bias="0.364" />
 
     <Button
-        android:id="@+id/BtnMasaje"
+        android:id="@+id/Añadir3"
         android:layout_width="126dp"
         android:layout_height="50dp"
         android:backgroundTint="#207178"
-        android:text="agregar"
+        android:text="Añadir"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,11 +78,11 @@
         app:layout_constraintVertical_bias="0.245" />
 
     <Button
-        android:id="@+id/relajante"
+        android:id="@+id/Añadir2"
         android:layout_width="150dp"
         android:layout_height="64dp"
         android:backgroundTint="#27253A"
-        android:text="ver más"
+        android:text="Añadir"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +107,7 @@
         android:id="@+id/imageView7"
         android:layout_width="174dp"
         android:layout_height="274dp"
-        android:src="@drawable/quiropractico"
+        android:src="@drawable/perkins"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
@@ -103,28 +117,14 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="216dp"
-        android:layout_height="141dp"
-        android:src="@drawable/relajante"
+        android:layout_width="186dp"
+        android:layout_height="147dp"
+        android:src="@drawable/perkins"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.801" />
-
-    <Button
-        android:id="@+id/Quiropractico"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#27253A"
-        android:text="ver más"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.844"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
+        app:layout_constraintVertical_bias="0.83" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
