--- a/app/src/main/res/layout/activity_vista_clinica.xml
+++ b/app/src/main/res/layout/activity_vista_clinica.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.161" />
 
     <Button
-        android:id="@+id/btnmasajes"
+        android:id="@+id/BtnMasaje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#207178"
@@ -85,7 +85,7 @@
         app:layout_constraintVertical_bias="0.809" />
 
     <Button
-        android:id="@+id/clientes"
+        android:id="@+id/Cliente"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:backgroundTint="#207178"
